codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_truncates_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.107.0)                                     │
│                                                                 │
│ 可访问 https://chatgpt.com/codex/settings/usage 查看最新        │
│ 配额与额度信息                                                  │
│                                                                 │
│  模型:         gpt-5.1-codex-max (推理：高, 总结：详细)         │
│  目录: [[workspace]]                                            │
│  权限:         自定义（只读，按需询问）                         │
│  AGENTS.md:    无                                               │
│                                                                 │
│  Token 用量:   1.9K 总计  (1K 输入 + 900 输出)                  │
│  上下文窗口:   100% 剩余 (2.25K 已用 / 272K)                    │
│  5h配额:       [██████░░░░░░░░░░░░░░] 28% 剩余 （重置于 03:14） │
╰─────────────────────────────────────────────────────────────────╯
